[project]
name = "fuzzing-llm-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "syheliel",email = "syheliel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
python=">=3.10,<4.0"
dependencies = [
    "sympy (>=1.13.3,<2.0.0)",
    "tree-sitter (>=0.24.0,<0.25.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "chromadb (>=1.0.3,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[tool.poetry.dependencies]
python = ">=3.10,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
